[tool.poetry]
name = "pdf-chatbot-example"
version = "0.1.0"
description = ""
authors = ["Rafael Irgolic <hello@irgolic.com>"]
license = "MIT"
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.10,<3.13"
asyncflows = {extras = ["pdf", "transformers"], version = "^0.1.1"}


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
